--- a/src/css/style.css
+++ b/src/css/style.css
@@ -69,3 +69,84 @@ body {
   font-size: 14px;
   opacity: 0.5;
 }
+
+form * {
+  display: block;
+  font: inherit;
+}
+
+form label {
+  margin-bottom: 10px;
+}
+
+form input {
+  width: 100%;
+  margin-top: 5px;
+  padding: 0.4em;
+  
+  border: 1px solid black;   
+  border-radius: 0.5em;
+  
+  background-color: #f0f0f0;
+}
+
+form textarea {
+  width: 100%;
+  margin-top: 5px;
+  padding: 0.4em;
+  
+  border: 1px solid black;   
+  border-radius: 0.5em;
+  
+  background-color: #f0f0f0;
+}
+
+form .buttons {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
+}
+
+form button {
+  margin-left: 5%;
+  padding: 0.5em;
+
+  border: 1px solid black;   
+  border-radius: 0.5em;
+
+  background-color: #d0d0d0;
+}
+
+form button:hover {
+  background-color: #ff8800;  
+  cursor: pointer;
+}
+
+.add-form {
+  display: none;
+  margin: 20px auto;
+  padding: 20px;
+  border: 1px solid #d0d0d0;  
+}
+
+.add-form button {
+  width: 10%;
+  min-width: 80px;
+  max-width: 100px;
+}
+
+.login-form {
+  display: none;
+  width: 250px;
+  margin: 20px auto;
+  padding: 20px;
+  border: 1px solid #d0d0d0;  
+}
+
+.login-form button {
+  width: 40%;
+}
+
+.active {
+  display: block;
+}
