Добавлена заготовка кода клиентской части

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -130,9 +130,7 @@ form button:hover {
 }
 
 .add-form button {
-  width: 10%;
-  min-width: 80px;
-  max-width: 100px;
+  width: 100px;
 }
 
 .login-form {
