Выполнен черновой вариант без фильтрации по категориям

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,6 +17,10 @@ body {
 }
 
 .header {
+  display: none;
+}
+
+.header-container {
   display: flex;
   justify-content: flex-end;
   padding: 10px 0;
